<resources>
    <string name="app_name">ResumeApp</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Short_text">

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    </string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Gulraiz Asmat</string>
    <string name="resume_title">Android Developer </string>
    <string name="user_address">Lahore,Pakistan </string>
    <string-array name="home">
        <item>Home</item>
        <item>Profile</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_information">Contact Information</string>
    <string name="email">gulraizasmat619@gmail.com</string>
    <string name="Address">Lahore,Pakistan</string>
    <string name="description">Description</string>
    <string name="AboutMe_Title">About Me</string>
    <string name="Question1">Where do you see yourself in the next five years?</string>
    <string name="Question2">Why should you hire me?</string>
    <string name="Question3">What are your hobbies and interests?</string>
    <string name="Question4">What are your hobbies and interests?</string>
    <string name="Question5">What are your hobbies and interests?</string>
    <string name="experience">Experience</string>
    <string name="hands_on_skills">Hands On Skills</string>
    <string name="phoneNumber">+923331870585</string>
    <string name="Linkedin_IdLink">https://www.linkedin.com/in/gulraiz-asmat-821515190/</string>
    <string name="Linkedin_UserName">Gulraiz Asamt</string>
    <string name="Twitter_userName">gulraiz_asmat</string>
    <string name="Twitter_IdLink">https://twitter.com/gulraiz_asmat</string>
    <string name="Github_UserName">GulraizAsmat</string>
    <string name="Github_IdLink">https://github.com/GulraizAsmat</string>
    <string name="StackOverFlow_UserName">Gulraiz Asmat</string>
    <string name="stackOverFlow_IdLink">https://stackoverflow.com/users/12089056/gulraiz-asmat</string>
    <string name="education">Education</string>
    <string name="answer">My goal right now is to find a position at a company where I can grow and take on new challenges over time. But most importantly, I want to work for an organization where I can build a career.”</string>
    <string name="answer1">I have all of the skills and experience that you’re looking for and I’m confident that I would be do best.</string>
    <string name="experience_title">Android Developer</string>
    <string name="experience_description">"\u2713 Picasso,Glide (Libraries)\n""\u2713 MVP \n""\u2713 MVVM \n""\u2713 Room Database\n""\u2713 Firebase"</string>
    <string name="why_i_did_choose_work_1">"\u2713 Because I need to cache the image\n""\u2713 Design pattern - unit testing easier and lesser\n"\u0020 \u0020 "code size than MVP\n""\u2713 Design pattern - Easier for unit testing\n""\u2713 Save data in a local database using Room\n""\u2713 Firebase provides a realtime database and \n"\u0020 \u0020 "backend as a service"

    </string>
    <string name="year11">(year)</string>
    <string name="experience_title1">Experience title</string>
    <string name="experience_description1">\u2713 Experience Description</string>
    <string name="experience_year1">(year)</string>
    <string name="experience_title2">Experience Title</string>
    <string name="experience_description2">\u2713 Experience Description</string>
    <string name="experience_year2">(year)</string>
    <string name="project_title">Smart Gym App</string>
    <string name="project_description">\u2713 Smart way to manage your gym</string>
    <string name="year">(2019)</string>
    <string name="project_title1">Lapi Chat App</string>
    <string name="project_description1">"\u2713 Plus friend (get exclusive deals from our favorite brands)\n""\u2713 Contacts management\n""\u2713 SMS messages\n""\u2713 Audio and graphics\n""\u2713 Sharing (photos and videos)"</string>
    <string name="year1">(2019)</string>
    <string name="project_title2">Smart Restaurant App </string>
    <string name="project_description2">\u2713 Smart way to manage your gym</string>
    <string name="year2">(2019)</string>
    <string name="todo">TODO</string>
    <string name="email_title">Email</string>
    <string name="address_title">Address</string>
    <string name="phone_number_title">Phone Number</string>
    <string name="professional_links_title">Professional Links</string>
    <string name="linkedin_title">Linkedin</string>
    <string name="twitter_title">Twitter</string>
    <string name="stack_overflow_title">Stack Overflow</string>
    <string name="github_title">Github</string>
    <string name="Metric_degree_title">Metric</string>
    <string name="school_name">Central Model school</string>
    <string name="intermediate_title">Intermediate</string>
    <string name="college_title">Islamia College Lahore</string>
    <string name="graduation_title">Graduation</string>
    <string name="university_title">Superior university</string>
    <string name="degree_title1">Degree Title</string>
    <string name="degree_title2">Degree Title</string>
    <string name="degree_title3">Degree Title</string>
    <string name="school_year">(2014)</string>
    <string name="college_year">(2016)</string>
    <string name="university_year">(Present)</string>
    <string name="Cgpa">(2.98 Cgpa)</string>
    <string name="certification_courses_title">Certification Courses</string>
    <string name="institute_title">Institute Title</string>
    <string name="institute_year">(year)</string>
    <string name="grades">(grades)</string>
    <string name="institute_title1">Institute Title</string>
    <string name="institude_year1">(year)</string>
    <string name="grades1">(grades)</string>
    <string name="institute_title2">Institute Title</string>
    <string name="institute_year2">(year)</string>
    <string name="grades2">(grades)</string>
    <string name="skill_title_1">Communication</string>
    <string name="skill_title_2">Android SDk</string>
</resources>