<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:padding="6dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/AboutMe_Title"
                android:textColor="@color/blackColor"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingEnd="10dp"
                android:text="@string/Question1"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"
          />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:fontFamily="@font/roboto"
                android:text="@string/answer"
                android:paddingEnd="10dp"
                android:textSize="15sp"
                android:layout_marginStart="15dp"
          
                android:textColor="@color/blackColor"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grayColor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Question2"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:fontFamily="@font/roboto"
          />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:fontFamily="@font/roboto"
                android:textSize="15sp"
                android:text="@string/answer1"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/blackColor"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"
        android:layout_marginTop="6dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="15dp"
      
            android:layout_marginTop="10dp"
            android:text="@string/contact_information"
            android:textColor="@color/blackColor"
            android:textSize="18sp"
            />
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            >
            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo" />
            <ImageView
                android:id="@+id/addressIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="53dp"
                android:contentDescription="@string/todo" />
            <ImageView
                android:id="@+id/phoneIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="55dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="45dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/email_title"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:fontFamily="@font/roboto"
                android:longClickable="true"
                android:text="@string/email"
                android:textColor="@color/blackColor"
                android:textIsSelectable="true"
                android:textSize="15sp" />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grayColor"
                android:fontFamily="@font/roboto" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/address_title"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:fontFamily="@font/roboto"
                android:longClickable="true"
                android:text="@string/Address"
                android:textColor="@color/blackColor"
                android:textIsSelectable="true"
                android:textSize="15sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grayColor"
                android:fontFamily="@font/roboto" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/phone_number_title"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto"
                android:longClickable="true"
                android:enabled="true"
                android:textIsSelectable="true"
                android:text="@string/phoneNumber"
                android:textColor="@color/blackColor"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            >
            <ImageView
                android:id="@+id/emaailCopyLink"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginTop="15dp"
                android:contentDescription="@string/todo" />
            <ImageView
                android:id="@+id/addressCopyLink"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginTop="53dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/phoneCopyLink"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginTop="48dp"
                android:contentDescription="@string/todo" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="60dp"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            >
            <ImageView
                android:id="@+id/emailIntentLink"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/phoneCallLink"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="121dp"
                android:contentDescription="@string/todo"
                />
        </LinearLayout>



    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginStart="15dp"

      
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/professional_links_title"
            android:textColor="@color/blackColor"
            android:textSize="18sp"
            />
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/linkedinIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo"
                />


            <ImageView
                android:id="@+id/githubIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="58dp"
                android:contentDescription="@string/todo"
                />

            <ImageView
                android:id="@+id/stackOverFlowIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/todo"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="45dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/linkedin_title"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linkedin"
                android:fontFamily="@font/roboto"
                android:text="@string/Linkedin_UserName"
                android:textColor="@color/blackColor"
                android:textSize="15sp"
                android:longClickable="true"
                android:enabled="true"
                android:textIsSelectable="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:enabled="true"
                android:longClickable="true"
                android:textIsSelectable="true"
                android:background="@color/grayColor"
                android:fontFamily="@font/roboto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/github_title"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:id="@+id/github"
                android:enabled="true"
                android:longClickable="true"
                android:textIsSelectable="true"
                android:text="@string/Github_UserName"
                android:textColor="@color/blackColor"
                android:textSize="15sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/grayColor"
                android:fontFamily="@font/roboto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/stack_overflow_title"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/roboto"
                android:id="@+id/stackOverFlow"
                android:enabled="true"
                android:longClickable="true"
                android:textIsSelectable="true"
                android:text="@string/StackOverFlow_UserName"
                android:textColor="@color/blackColor"
                android:textSize="15sp" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="45dp"
            >
            <ImageView
                android:id="@+id/linkedinCopyLink"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginTop="15dp"
                android:contentDescription="@string/todo"
                />

            <ImageView
                android:id="@+id/githubCopyLink"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginTop="55dp"
                android:contentDescription="@string/todo"
                />
            <ImageView
                android:id="@+id/stackOverFlowCopyLink"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginTop="53dp"
                android:contentDescription="@string/todo"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="60dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/linkedinIntentLink"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginTop="15dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/githubIntentLink"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginTop="55dp"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/stackOverFlowIntentLink"
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:layout_marginTop="53dp"
                android:contentDescription="@string/todo" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>